Update projects.json via admin

--- a/data/projects.json
+++ b/data/projects.json
@@ -3,5 +3,25 @@
     "title": "LangGraph Fastapi project builder agent",
     "description": "",
     "link": ""
+  },
+  {
+    "title": "Multi-model Cyberbullying detection and Prevention",
+    "description": "",
+    "link": ""
+  },
+  {
+    "title": "E-learning FullStack Application",
+    "description": "",
+    "link": ""
+  },
+  {
+    "title": "College Management System - Full Stack",
+    "description": "",
+    "link": ""
+  },
+  {
+    "title": "E- Railway Ticket Booking System",
+    "description": "",
+    "link": ""
   }
 ]
