Update projects.json via admin

--- a/data/projects.json
+++ b/data/projects.json
@@ -1,27 +1,27 @@
 [
   {
     "title": "LangGraph Fastapi project builder agent",
-    "description": "",
-    "link": ""
+    "description": "Updating...",
+    "link": "https://example.com/"
   },
   {
     "title": "Multi-model Cyberbullying detection and Prevention",
-    "description": "",
-    "link": ""
+    "description": "Updating...",
+    "link": "https://example.com/"
   },
   {
     "title": "E-learning FullStack Application",
-    "description": "",
-    "link": ""
+    "description": "Updating...",
+    "link": "https://example.com/"
   },
   {
     "title": "College Management System - Full Stack",
-    "description": "",
-    "link": ""
+    "description": "Updating...",
+    "link": "https://example.com/"
   },
   {
     "title": "E- Railway Ticket Booking System",
-    "description": "",
-    "link": ""
+    "description": "Updating...",
+    "link": "https://example.com/"
   }
 ]
