--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.7",
     "@types/nodemailer": "^7.0.5",
     "framer-motion": "^12.26.2",
     "lottie-react": "^2.4.1",
