Update projects.json via admin

--- a/data/projects.json
+++ b/data/projects.json
@@ -41,9 +41,10 @@
     "type": "backend"
   },
   {
-    "title": "Website",
-    "description": "",
+    "title": "CMS website for a charity",
+    "description": "CMS website for a small NGO charity organization to manage their contents using Netlify's decap",
     "link": "",
-    "type": "freelance"
+    "type": "freelance",
+    "image": "/images/cms_website_for_a_charity.png"
   }
 ]
