Update projects.json via admin

--- a/data/projects.json
+++ b/data/projects.json
@@ -43,7 +43,7 @@
   {
     "title": "CMS website for a charity",
     "description": "CMS website for a small NGO charity organization to manage their contents using Netlify's decap",
-    "link": "",
+    "link": "https://kanishkumar-k.vercel.app/",
     "type": "freelance",
     "image": "/images/cms_website_for_a_charity.png"
   },
