Update projects.json via admin

--- a/data/projects.json
+++ b/data/projects.json
@@ -11,7 +11,13 @@
     "description": "Random Forest and BERT based multi model cyberbullying detection and prevention system in a twitter clone application",
     "link": "https://github.com/kanishkumar-k/twitter-clone-with-proactive-cyberbullying-detection",
     "image": "/images/project.png",
-    "type": "ai/ml"
+    "type": "ai/ml",
+    "_buttonTypes": [
+      {
+        "type": "architecture",
+        "img": ""
+      }
+    ]
   },
   {
     "title": "College Management LMS system",
