Update projects.json via admin

--- a/data/projects.json
+++ b/data/projects.json
@@ -15,9 +15,10 @@
     "_buttonTypes": [
       {
         "type": "architecture",
-        "img": ""
+        "img": "/images/multi_model_cyberbullying_detection_and_prevention_system.png"
       }
-    ]
+    ],
+    "architecture": "/images/multi_model_cyberbullying_detection_and_prevention_system.png"
   },
   {
     "title": "College Management LMS system",
