Update projects.json via admin

--- a/data/projects.json
+++ b/data/projects.json
@@ -15,7 +15,7 @@
     "_buttonTypes": [
       {
         "type": "architecture",
-        "img": "/images/multi_model_cyberbullying_detection_and_prevention_system.png"
+        "img": "/images/architecture.png"
       },
       {
         "type": "algorithm",
