--- a/data/projects.json
+++ b/data/projects.json
@@ -22,7 +22,7 @@
         "img": "/images/multi_model_cyberbullying_detection_and_prevention_system.png"
       }
     ],
-    "architecture": "/images/multi_model_cyberbullying_detection_and_prevention_system.png",
+    "architecture": "/images/architecture.png",
     "algorithm": "/images/multi_model_cyberbullying_detection_and_prevention_system.png"
   },
   {
